test_regress/t/t_case_overlap_bad.out
%Warning-CASEOVERLAP: t/t_case_overlap_bad.v:21:13: Case values overlap
   21 |             3'b001, 3'b000: $stop;
      |             ^~~~~~
                      t/t_case_overlap_bad.v:20:13: ... Location of overlapping case
   20 |             3'b00?: $stop;
      |             ^~~~~~
                      ... For warning description see https://verilator.org/warn/CASEOVERLAP?v=latest
                      ... Use "/* verilator lint_off CASEOVERLAP */" and lint_on around source to disable this message.
%Warning-CASEOVERLAP: t/t_case_overlap_bad.v:26:13: Case values overlap (example pattern 0x7)
   26 |             3'b11?: $stop;
      |             ^~~~~~
                      t/t_case_overlap_bad.v:25:13: ... Location of overlapping case
   25 |             3'b111, 3'b0??: v++;
      |             ^~~~~~
%Warning-CASEOVERLAP: t/t_case_overlap_bad.v:31:13: Case values overlap
   31 |             3'b001: $stop;
      |             ^~~~~~
                      t/t_case_overlap_bad.v:30:21: ... Location of overlapping case
   30 |             3'b000, 3'b001, 3'b010, 3'b011: $stop;
      |                     ^~~~~~
%Warning-CASEOVERLAP: t/t_case_overlap_bad.v:36:13: Case values overlap
   36 |             3'b011: $stop;
      |             ^~~~~~
                      t/t_case_overlap_bad.v:35:37: ... Location of overlapping case
   35 |             3'b000, 3'b001, 3'b010, 3'b011: $stop;
      |                                     ^~~~~~
%Error: Exiting due to
